--- a/src/main/resources/templates/system/role/list.html
+++ b/src/main/resources/templates/system/role/list.html
@@ -1,5 +1,6 @@
 <#include "/include/header.html">
 <#include "/include/scripts.html">
+<#import "/spring.ftl" as spring/>
 <html>
 <@header></@header>
 <body class="gray-bg">
@@ -17,10 +18,17 @@
                                                 <div class="box-header">
                                                     <div class="input-group">
                                                         <@shiro.hasPermission name="addRole">
-                                                            <a class="btn btn-info btn-flat dialog" href="javascript:;" data-url="/system/role/add" data-title="创建新角色"><i class="fa fa-plus"></i>创建新角色</a>
+                                                            <a class="btn btn-info btn-flat dialog" href="javascript:;" data-url="/system/role/add"
+                                                               data-title="<@spring.message code='system.role.common.action.createRole'/>">
+                                                                <i class="fa fa-plus"></i>
+                                                                <@spring.message code='system.role.common.action.createRole'/>
+                                                            </a>
                                                         </@shiro.hasPermission>
                                                         <@shiro.hasPermission name="deleteBatchRole">
-                                                            <a class="btn btn-danger btn-flat " delete-batch-url="/system/role/deleteBatch"><i class="fa fa-remove"></i>批量删除选中</a>
+                                                            <a class="btn btn-danger btn-flat " delete-batch-url="/system/role/deleteBatch">
+                                                                <i class="fa fa-remove"></i>
+                                                                <@spring.message code='system.role.common.action.batchDeleteRole'/>
+                                                            </a>
                                                         </@shiro.hasPermission>
                                                         <div class="input-group">
                                                             <input type="text" name="search" value="${search!}" class="form-control" placeholder="Search">
@@ -40,12 +48,15 @@
                                         <div class="col-sm-12">
                                             <table class="table table-bordered table-hover dataTable dtr-inline">
                                                 <tr>
-                                                    <th><input value="root" type="checkbox" class="minimal checkbox-toolbar"> 行号</th>
-                                                    <th>角色名称</th>
-                                                    <th>描述</th>
-                                                    <th>创建时间</th>
-                                                    <th>状态</th>
-                                                    <th>操作</th>
+                                                    <th>
+                                                        <input value="root" type="checkbox" class="minimal checkbox-toolbar">
+                                                        <@spring.message code='system.row.list.rowNo'/>
+                                                    </th>
+                                                    <th><@spring.message code='system.role.common.roleName'/></th>
+                                                    <th><@spring.message code='system.role.common.description'/></th>
+                                                    <th><@spring.message code='system.role.common.createTime'/></th>
+                                                    <th><@spring.message code='system.role.common.status'/></th>
+                                                    <th><@spring.message code='system.role.common.action'/></th>
                                                 </tr>
                                                 <#list pageData.getRecords() as role>
                                                     <tr>
@@ -56,27 +67,50 @@
                                                             </label>
                                                         </td>
                                                         <td>${(role.roleName)!}
+                                                            <#assign args = ['${(role.roleName)!}']>
                                                             <a class="btn btn-xs dialog"
                                                                data-wdith="800"
-                                                               data-title="所属角色[${(role.roleName)!}]的用户列表"
-                                                               data-url="/system/role/getUsers?roleId=${role.id}"><span>【查看用户】</span>
+                                                               data-title="<@spring.messageArgs 'system.row.list.roleUserList' args/>"
+                                                               data-url="/system/role/getUsers?roleId=${role.id}">
+                                                                <span>
+                                                                    <@spring.message code='system.row.list.viewUser'/>
+                                                                </span>
                                                             </a>
                                                         </td>
                                                         <td>${(role.roleDesc)!'--'}</td>
                                                         <td>${(role.createTime?string('yyyy/MM/dd HH:mm:ss'))!'--'}</td>
-                                                        <td><#if role.state==1>启用<#else><font color="red">禁用</font></#if></td>
+                                                        <td>
+                                                            <#if role.state==1>
+                                                                <@spring.message code='system.role.common.status.enabled'/>
+                                                            <#else>
+                                                                <style='color: red;>
+                                                                    <@spring.message code='system.role.common.status.disabled'/>
+                                                                </style>
+                                                            </#if>
+                                                        </td>
                                                         <td>
                                                             <@shiro.hasPermission name="authRole">
-                                                                <a class="btn btn-success btn-xs dialog" href="javascript:;" data-url="/system/role/auth/${(role.id)!}" data-title="授权" data-toggle="tooltip" title="授权" data-placement="bottom">授权</a>
+                                                                <a class="btn btn-success btn-xs dialog" href="javascript:;"
+                                                                   data-url="/system/role/auth/${(role.id)!}" data-title="<@spring.message code='system.role.common.action.authorize'/>"
+                                                                   data-toggle="tooltip" title="<@spring.message code='system.role.common.action.authorize'/>"
+                                                                   data-placement="bottom"><@spring.message code='system.role.common.action.authorize'/></a>
                                                             </@shiro.hasPermission>
                                                             <@shiro.hasPermission name="editRole">
-                                                                <a class="btn btn-primary btn-xs dialog" href="javascript:;" data-url="/system/role/edit/${(role.id)!}" data-title="编辑" data-toggle="tooltip" title="编辑" data-placement="bottom">编辑</a>
+                                                                <a class="btn btn-primary btn-xs dialog" href="javascript:;"
+                                                                   data-url="/system/role/edit/${(role.id)!}" data-title="<@spring.message code='system.role.common.action.edit'/>"
+                                                                   data-toggle="tooltip" title="<@spring.message code='system.role.common.action.edit'/>"
+                                                                   data-placement="bottom">
+                                                                    <@spring.message code='system.role.common.action.edit'/>
+                                                                </a>
                                                             </@shiro.hasPermission>
                                                             <@shiro.hasPermission name="deleteRole">
-                                                                <a class="btn btn-danger btn-xs" data-toggle="tooltip" title="删除" data-placement="bottom"
+                                                                <a class="btn btn-danger btn-xs" data-toggle="tooltip"
+                                                                   title="<@spring.message code='system.role.common.action.delete'/>" data-placement="bottom"
                                                                    data-tiggle="ajax"
                                                                    data-submit-url="/system/role/delete?id=${(role.id)!}"
-                                                                   data-confirm="您确定要删除该条记录吗?">删除</a>
+                                                                   data-confirm="<@spring.message code='system.row.list.message.deleteRole'/>">
+                                                                    <@spring.message code='system.role.common.action.delete'/>
+                                                                </a>
                                                             </@shiro.hasPermission>
                                                         </td>
                                                     </tr>
