--- a/src/main/resources/templates/system/user/edit.html
+++ b/src/main/resources/templates/system/user/edit.html
@@ -67,7 +67,7 @@
             <div class="form-group">
                 <div style="display:flex;">
                     <div class="col-sm-3">
-                        &nbsp;
+                        &nbsp
                     </div>
                     <div class="col-sm-9">
                         <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
