--- a/src/main/resources/templates/system/role/add.html
+++ b/src/main/resources/templates/system/role/add.html
@@ -1,6 +1,6 @@
 <#include "/include/layout_ff.html">
-<@header>
-</@header>
+<#import "/spring.ftl" as spring/>
+<@header></@header>
 <body>
 <section class="content">
     <div class="container-fluid">
@@ -9,36 +9,56 @@
                 <div class="box-body">
                     <div class="form-group">
                         <div style="display:flex;">
-                            <label for="uname" class="col-sm-1 control-label">角色</label>
-                            <div class="col-sm-11">
-                                <input type="text" id="uname" name="roleName" class="form-control" placeholder="请输入角色名" lay-verify="required">
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.role.common.role'/>:
+                            </label>
+                            <div class="col-sm-9">
+                                <input type="text" name="roleName" class="form-control" lay-verify="required">
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div style="display:flex;">
-                            <label class="col-sm-1 control-label">描述</label>
-                            <div class="col-sm-11">
-                                <textarea class="form-control" name="roleDesc" rows="3" placeholder="请输入描述，最多300个字符 ..."></textarea>
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.role.common.description'/>:
+                            </label>
+                            <div class="col-sm-9">
+                                <textarea class="form-control" name="roleDesc" rows="3"></textarea>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div style="display:flex;">
-                            <label class="col-sm-1 control-label">状态</label>
-                            <div class="col-sm-11" style="padding-top:7px">
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.role.common.status'/>:
+                            </label>
+                            <div class="col-sm-9 mt-2">
                                 <label>
-                                    <input name="roleState" type="radio" class="minimal" checked value="1" lay-ignore> 启用
+                                    <input name="roleState" type="radio" class="minimal" checked value="1" lay-ignore>
+                                    <@spring.message code='system.role.common.status.enabled'/>
                                 </label>
                                 <label>
-                                    <input name="roleState" type="radio" class="minimal" value="-1" lay-ignore> 禁用
+                                    <input name="roleState" type="radio" class="minimal" value="-1" lay-ignore>
+                                    <@spring.message code='system.role.common.status.disabled'/>
                                 </label>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-12">
-                            <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit"><i class="fa fa-save"></i> 提 交</button>
+                        <div style="display:flex;">
+                            <div class="col-sm-3">
+                                &nbsp;
+                            </div>
+                            <div class="col-sm-9">
+                                <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
+                                    <i class="fa fa-save"></i>
+                                    <@spring.message code='system.role.common.action.submit'/>
+                                </button>
+                                <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
+                                    <i class="fa fa-angle-left"></i>
+                                    <@spring.message code='system.role.common.action.cancel'/>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
