--- a/src/main/resources/templates/system/user/add.html
+++ b/src/main/resources/templates/system/user/add.html
@@ -71,7 +71,12 @@
                             <div class="col-sm-9">
                                 <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
                                     <i class="fa fa-save"></i>
-                                    <@spring.message code='system.user.common.action.submit'/></button>
+                                    <@spring.message code='system.user.common.action.submit'/>
+                                </button>
+                                <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
+                                    <i class="fa fa-angle-left"></i>
+                                    <@spring.message code='system.role.common.action.cancel'/>
+                                </a>
                             </div>
                         </div>
                     </div>
