--- a/src/main/resources/templates/system/dept/list.html
+++ b/src/main/resources/templates/system/dept/list.html
@@ -53,7 +53,7 @@
                                                             </@shiro.hasPermission>
                                                             <@shiro.hasPermission name="deleteDept">
                                                                 <a class="btn btn-danger btn-xs" data-tiggle="ajax" data-submit-url="/system/dept/delete?id=${(dept.id)!}"
-                                                                   data-confirm="<@spring.message code='system.department.list.message.deleteUser'/>"><i class="fa fa-times"></i><@spring.message code='system.department.common.action.delete'/></a>
+                                                                   data-confirm="<@spring.message code='system.common.message.delete'/>"><i class="fa fa-times"></i><@spring.message code='system.department.common.action.delete'/></a>
                                                             </@shiro.hasPermission>
                                                         </td>
                                                     </tr>
