--- a/src/main/resources/templates/system/role/add.html
+++ b/src/main/resources/templates/system/role/add.html
@@ -52,11 +52,11 @@
                             <div class="col-sm-9">
                                 <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
                                     <i class="fa fa-save"></i>
-                                    <@spring.message code='system.role.common.action.submit'/>
+                                    <@spring.message code='system.common.action.submit'/>
                                 </button>
                                 <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
                                     <i class="fa fa-angle-left"></i>
-                                    <@spring.message code='system.role.common.action.cancel'/>
+                                    <@spring.message code='system.common.action.cancel'/>
                                 </a>
                             </div>
                         </div>
