--- a/src/main/resources/templates/system/role/auth.html
+++ b/src/main/resources/templates/system/role/auth.html
@@ -37,11 +37,11 @@
                     <div class="box-footer">
                         <button type="submit" class="btn btn-success" lay-submit lay-filter="submit">
                             <i class="fa fa-save"></i>
-                            <@spring.message code='system.role.common.action.authorize'/>
+                            <@spring.message code='system.common.action.authorize'/>
                         </button>
                         <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
                             <i class="fa fa-angle-left"></i>
-                            <@spring.message code='system.role.common.action.cancel'/>
+                            <@spring.message code='system.common.action.cancel'/>
                         </a>
                     </div>
                 </div>
