--- a/src/main/resources/templates/system/dept/add.html
+++ b/src/main/resources/templates/system/dept/add.html
@@ -19,7 +19,7 @@
                         <div style="display:flex;">
                             <label class="col-sm-3 control-label text-right mt-2"><@spring.message code='system.department.common.description'/>:</label>
                             <div class="col-sm-9">
-                                <textarea class="form-control" name="deptDesc" placeholder="<@spring.message code='system.department.placeholder.description'/>" rows="3"></textarea>
+                                <textarea class="form-control" name="deptDesc" placeholder="<@spring.message code='system.common.placeholder.description'/>" rows="3"></textarea>
                             </div>
                         </div>
                     </div>
@@ -31,8 +31,12 @@
                             <div class="col-sm-9">
                                 <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
                                     <i class="fa fa-save"></i>
-                                    <@spring.message code='system.department.common.action.submit'/>
+                                    <@spring.message code='system.common.action.submit'/>
                                 </button>
+                                <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
+                                    <i class="fa fa-angle-left"></i>
+                                    <@spring.message code='system.common.action.cancel'/>
+                                </a>
                             </div>
                         </div>
                     </div>
