--- a/src/main/resources/templates/system/menu/editAction.html
+++ b/src/main/resources/templates/system/menu/editAction.html
@@ -76,8 +76,12 @@
                             <div class="col-sm-9">
                                 <button type="submit" class="btn btn-success" lay-submit lay-filter="submit">
                                     <i class="fa fa-save"></i>
-                                    <@spring.message code='system.menu.comm.action.submit'/>
+                                    <@spring.message code='system.common.action.submit'/>
                                 </button>
+                                <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
+                                    <i class="fa fa-angle-left"></i>
+                                    <@spring.message code='system.common.action.cancel'/>
+                                </a>
                             </div>
                         </div>
                     </div>
