--- a/src/main/resources/templates/system/user/add.html
+++ b/src/main/resources/templates/system/user/add.html
@@ -9,17 +9,21 @@
                 <div class="box-body">
                     <div class="form-group">
                         <div style="display:flex;">
-                            <label for="uname" class="col-sm-3 control-label text-right mt-2" ><@spring.message code='system.user.common.userName'/>:</label>
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.user.common.userName'/>:
+                            </label>
                             <div class="col-sm-9">
-                                <input type="text" id="uname" name="userName" class="form-control" placeholder="<@spring.message code='system.user.placeholder.username'/>" lay-verify="required|name|check" check-url="/system/user/checkName">
+                                <input type="text" name="userName" class="form-control"
+                                       placeholder="<@spring.message code='system.user.placeholder.username'/>"
+                                       lay-verify="required|username|check" check-url="/system/user/checkName">
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div style="display:flex;">∫
+                        <div style="display:flex;">
                             <label class="col-sm-3 control-label text-right mt-2"><@spring.message code='system.user.common.department'/>:</label>
                             <div class="col-sm-9">
-                                <select name="deptId" class="form-control" style="width: 100%; height: 35px;" lay-verify="required">
+                                <select name="deptId" class="form-control" lay-verify="required">
                                     <#list deptList as dept>
                                         <option value="${(dept.id)!}">${(dept.deptName)!}</option>
                                     </#list>
@@ -31,7 +35,7 @@
                         <div style="display:flex;">
                             <label class="col-sm-3 control-label text-right mt-2"><@spring.message code='system.user.common.description'/>:</label>
                             <div class="col-sm-9">
-                                <textarea class="form-control" name="remark" rows="3" placeholder="<@spring.message code='system.user.placeholder.description'/>"></textarea>
+                                <textarea class="form-control" name="remark" rows="3" placeholder="<@spring.message code='system.common.placeholder.description'/>"></textarea>
                             </div>
                         </div>
                     </div>
@@ -71,11 +75,11 @@
                             <div class="col-sm-9">
                                 <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
                                     <i class="fa fa-save"></i>
-                                    <@spring.message code='system.user.common.action.submit'/>
+                                    <@spring.message code='system.common.action.submit'/>
                                 </button>
                                 <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');">
                                     <i class="fa fa-angle-left"></i>
-                                    <@spring.message code='system.role.common.action.cancel'/>
+                                    <@spring.message code='system.common.action.cancel'/>
                                 </a>
                             </div>
                         </div>
