--- a/src/main/resources/templates/system/user/list.html
+++ b/src/main/resources/templates/system/user/list.html
@@ -23,7 +23,7 @@
                                                                 <@spring.message code='system.user.common.action.createUser'/>
                                                             </a>
                                                         </@shiro.hasPermission>
-                                                        <input type="text" name="search" value="${search!}" class="form-control" placeholder="<@spring.message code='system.user.placeholder.search'/>" autocomplete="off">
+                                                        <input type="text" name="search" value="${search!}" class="form-control" placeholder="<@spring.message code='system.common.placeholder.search'/>" autocomplete="off">
                                                         <div class="input-group">
                                                             <button class="btn btn-default btn-flat" type="submit">
                                                                 <i class="fa fa-search"></i>
